@@ -1,4 +1,5 @@
 1.8:
+- build pcmcia header only on i386/x86_64 (#30668)
 - use api.mandriva.com to retrieve mirror list (#29346)
 
 1.7:
